# ao

./: .gitignore  Cargo.toml  GEMINI.md  JULES_SEC_AUDIT.md  README.md  SPEC.md  TESTING.md  ao.sh  debug.txt  index.html  interactive_status.md  phase1.md  security-audit.md
.github/workflows/: release.yml  test.yml
plans/: cockpit.md  cockpit_original.md  container_test.md  dashboard.md  dashboard_tests.md  features3.md  macos.md  phase2.md  refactor1.md  unify.md
scripts/: install-hooks.sh  pre-commit
src/: cli.rs  config.rs  lib.rs  main.rs
src/dashboard/: app.rs  charts.rs  mod.rs  network.rs  overview.rs  processes.rs  rss.rs  sensors.rs  services.rs  storage.rs  ui.rs  users.rs  utils.rs  virtualization.rs
src/os/: alpine.rs  arch.rs  debian.rs  detector.rs  fedora.rs  macos.rs  mod.rs  systemd.rs
src/os/linux_generic/: boot.rs  common.rs  completions.rs  dev.rs  disk.rs  distro.rs  group.rs  gui.rs  log.rs  mod.rs  monitor.rs  net.rs  partition.rs  sec.rs  self_domain.rs  svc.rs  sys.rs  user.rs  virt.rs
tests/: completions_test.sh  dashboard_ui_tests.rs  distro_containers.rs  macos_tests.rs  print_commands.rs  read_only_tests.sh  shell_completions.rs
tests/containers/: alpine.Dockerfile  archlinux.Dockerfile  debian.Dockerfile  fedora.Dockerfile  macos.Dockerfile  ubuntu.Dockerfile
