[package]
name = "ao"
version = "0.1.6"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = { version = "4.6.0", features = ["unstable-dynamic"] }
colored = "3.1.1"
comfy-table = { version = "7.2.2", features = ["tty"] }
crossterm = "0.29.0"
duct = "1.1.1"
rpassword = "7.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
sysinfo = "0.38.4"
thiserror = "2.0.18"
dialoguer = { version = "0.11.0", features = ["history"] }

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
